style: fix filters z-index

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -225,6 +225,7 @@ main {
   background-color: rgb(0,0,0);
   border-radius: 0.25rem;
   padding: 0.75rem 1rem;
+  z-index: 10;
 }
 
 .level-filter {
